; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_ddi.c_intel_ddi_dp_pre_emphasis_max.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_ddi.c_intel_ddi_dp_pre_emphasis_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_encoder = type { i32 }

@DP_TRAIN_VOLTAGE_SWING_MASK = common dso_local global i32 0, align 4
@DP_TRAIN_PRE_EMPH_LEVEL_3 = common dso_local global i32 0, align 4
@DP_TRAIN_PRE_EMPH_LEVEL_2 = common dso_local global i32 0, align 4
@DP_TRAIN_PRE_EMPH_LEVEL_1 = common dso_local global i32 0, align 4
@DP_TRAIN_PRE_EMPH_LEVEL_0 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @intel_ddi_dp_pre_emphasis_max(%struct.intel_encoder* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.intel_encoder*, align 8
  %5 = alloca i32, align 4
  store %struct.intel_encoder* %0, %struct.intel_encoder** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @DP_TRAIN_VOLTAGE_SWING_MASK, align 4
  %8 = and i32 %6, %7
  switch i32 %8, label %16 [
    i32 131, label %9
    i32 130, label %11
    i32 129, label %13
    i32 128, label %15
  ]

9:                                                ; preds = %2
  %10 = load i32, i32* @DP_TRAIN_PRE_EMPH_LEVEL_3, align 4
  store i32 %10, i32* %3, align 4
  br label %18

11:                                               ; preds = %2
  %12 = load i32, i32* @DP_TRAIN_PRE_EMPH_LEVEL_2, align 4
  store i32 %12, i32* %3, align 4
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @DP_TRAIN_PRE_EMPH_LEVEL_1, align 4
  store i32 %14, i32* %3, align 4
  br label %18

15:                                               ; preds = %2
  br label %16

16:                                               ; preds = %2, %15
  %17 = load i32, i32* @DP_TRAIN_PRE_EMPH_LEVEL_0, align 4
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %16, %13, %11, %9
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
